# spendario

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 202408121200_initial_schema.py  202502171200_add_deleted_at_to_expenses.py
backend/src/app/: config.py  database.py  dependencies.py  main.py  security.py
backend/src/app/models/: __init__.py  base.py  category.py  expense.py  user.py
backend/src/app/routers/: __init__.py  auth.py  expenses.py
backend/src/app/schemas/: auth.py  expense.py
backend/tests/: conftest.py  test_auth.py  test_expenses.py  test_health.py
frontend/: .dockerignore  Dockerfile  package.json  playwright.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(auth)/_components/: auth-form.tsx
frontend/app/(auth)/login/: page.tsx
frontend/app/(auth)/register/: page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/(protected)/categories/: page.tsx
frontend/app/(protected)/dashboard/: page.tsx
frontend/app/(protected)/expenses/: page.tsx
frontend/app/(protected)/onboarding/: page.tsx
frontend/tests/: auth.spec.ts  expenses.spec.ts  navigation.spec.ts  onboarding.spec.ts
